--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>kono somosha e somosha noy, jodi tumi bose nah thako</h2>
-    <img width="400" src="Image/17.JPG" alt="">
+    <img width="400" src="Image/17.jpg" alt="">
     <img width="176.5" src="Image/18.jpg" alt="">
 </body>
 </html>
